--- a/views/index.pug
+++ b/views/index.pug
@@ -15,3 +15,5 @@ html
         button#submitButton(type='submit') Submit
       form(id="list", method="GET", class="form"  action="/list")
         button#submitButtonList(type='submit') List
+      form(id="list", method="GET", class="form"  action="/listtolist")
+        button#submitButtonListToList(type='submit') List to List
